# tiritos

./: .gitignore  Dockerfile.northflank  README.md  docker-compose.yml  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
docs/: architecture.md
maps/builtin/clover-junction/: map.json
maps/builtin/level1/: map.json
maps/builtin/switchback-basin/: map.json
protocol/: palette.v2.json
scripts/: check.sh  dev.sh
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/maps/: decoder.rs  mod.rs  palette.rs  validator.rs
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/e2e/: fluidity.selenium.mjs  two-player.selenium.mjs
web/src/: main.test.ts  main.ts  style.css
