[package]
name = "paint-arena-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
base64 = "0.22.1"
png = "0.17.16"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
